[ADD]/File Management features

--- a/Frontend/assets/lang/en.json
+++ b/Frontend/assets/lang/en.json
@@ -70,6 +70,8 @@
   "quickActions": "Quick Actions",
   "manageActiveUsers": "Active Users",
   "viewDeactiveUsers": "Deactive Users",
+  "fileManagement": "File Management",
+  "fileList": "File List",
   "exportAllUsers": "Export All Users",
   "addNewUser": "Add New User",
   "verifyEmailTitle": "Account Created Successfully! 🎉",
@@ -443,6 +445,7 @@
   "search": "Search",
   "myProfileTitle": "My Profile",
   "profileDetails": "Profile Details",
+  "fileDetails": "File Details",
   "enterFullAddress": "Enter full address",
   "tellUsAboutYourself": "Tell us about yourself",
   "editProfilePicture": "Edit Profile Picture",
@@ -568,5 +571,82 @@
   "failedToInitializeApplication": "Failed to initialize application",
   "deleteFailed": "Delete failed",
   "modalNotFound": "Modal not found",
-  "failedToLoadData": "Failed to load data"
+  "failedToLoadData": "Failed to load data",
+  "uploadFileTitle": "Upload File",
+  "fileInformation": "File Information",
+  "uploadFile": "Upload File",
+  "notAuthenticated": "Not authenticated",
+  "fileManagementTitle": "File Management",
+  "fileDeletedSuccessfully": "File deleted successfully!",
+  "deleteFileConfirmDesc": "Are you sure you want to delete this file?",
+  "failedToUploadFile": "Failed to upload file",
+  "maxFileSize": "Max file size: 100MB",
+  "failedToLoadFiles": "Failed to load files",
+  "filePreview": "File Preview",
+  "fileType": "File Type",
+  "description": "Description (optional)",
+  "uploading": "Uploading...",
+  "uploadSuccess": "File uploaded successfully!",
+  "uploadFailed": "Upload failed!",
+  "enterDescription": "Enter description (optional)",
+  "deleting": "Deleting...",
+  "confirmDeleteUser": "Are you sure you want to delete this user?",
+  "confirmRestoreUser": "Are you sure you want to restore user",
+  "failedToLoadUserInfo": "Failed to load user information",
+  "pleaseSelectValidImageFile": "Please select a valid image file (JPG, PNG, GIF)",
+  "imageSizeMustBeLessThan5MB": "Image size must be less than 5MB",
+  "imageSizeIsVerySmall": "Image size is very small, please select a larger image",
+  "cropperNotReady": "Image cropper is not ready",
+  "cropAreaInvalid": "Invalid crop area",
+  "cropAreaLargerThanImage": "Crop area is larger than image",
+  "canvasIsNull": "Canvas is null",
+  "profilePictureCroppedSuccessfully": "Profile picture cropped successfully",
+  "failedToCropImage": "Failed to crop image",
+  "profilePictureRemoved": "Profile picture removed",
+  "failedToUpdateProfile": "Failed to update profile",
+  "profileUpdatedSuccessfully": "Profile updated successfully",
+  "updateFailed": "Update failed",
+  "failedToInitializeCropper": "Failed to initialize image cropper",
+  "imageTooSmall": "Image is too small",
+  "failedToLoadImage": "Failed to load image",
+  "imageIsTooSmall": "Image is too small",
+  "pdfLibraryNotLoaded": "PDF library not loaded",
+  "googleLoginFailedPleaseTryAgain": "Google login failed. Please try again.",
+  "invalidOrExpiredResetToken": "Invalid or expired reset token",
+  "pleaseEnterValidEmailAddress": "Please enter a valid email address",
+  "passwordMustBeAtLeast6Characters": "Password must be at least 6 characters",
+  "loginFailedPleaseTryAgain": "Login failed. Please try again.",
+  "usernameInvalid": "Username must be between 3 and 50 characters and contain only letters and numbers",
+  "pleaseEnterValidEmailAddress": "Please enter a valid email address",
+  "passwordInvalid": "Password must be at least 6 characters and contain at least one uppercase letter, one lowercase letter, and one number",
+  "registrationFailedTryAgain": "Registration failed! Please try again.",
+  "failedToSendResetEmailTryAgain": "Failed to send reset email! Please try again.",
+  "passwordResetFailedTryAgain": "Password reset failed! Please try again.",
+  "passwordChangeFailedTryAgain": "Password change failed! Please try again.",
+  "saveProfilePicture": "Save Profile Picture",
+  "rotateLeft": "Left",
+  "rotateRight": "Right",
+  "deleteFileConfirmTitle": "Delete File Confirmation",
+  "deleteFileConfirmDesc": "You are about to permanently delete this file. This action cannot be undone.",
+  "uploadedAt": "Uploaded At",
+  "allFieldsRequired": "All fields are required",
+  "downloadFailed": "Download failed",
+  "downloading": "Downloading...",
+  "downloadStarted": "Download started",
+  "errorLoadingSettings": "Error loading settings",
+  "errorLoadingUserProfile": "Error loading user profile",
+  "errorSavingProfile": "Error saving profile",
+  "errorSavingSettings": "Error saving settings",
+  "failedToDeleteFile": "Failed to delete file",
+  "failedToLoadUserProfile": "Failed to load user profile",
+  "fileUploadedSuccessfully": "File uploaded successfully",
+  "settingsLoaded": "Settings loaded successfully",
+  "settingsSavedSuccessfully": "Settings saved successfully",
+  "userInformationNotFound": "User information not found",
+  "viewFile": "View File",
+  "author": "Author",
+  "editor": "Editor",
+  "maintainer": "Maintainer",
+  "selectRole": "Select Role",
+  "subscriber": "Subscriber"
 }
