--- a/Frontend/assets/lang/ja.json
+++ b/Frontend/assets/lang/ja.json
@@ -91,6 +91,8 @@
   "invalidFeedback": "このフィールドは必須です。",
   "formText": "フォームテキスト",
   "usernameRequired": "ユーザー名は必須です。",
+  "fileManagement": "ファイル管理",
+  "fileList": "ファイル一覧",
   "usernameInvalidFormat": "ユーザー名は英数字のみ使用可能で、スペースや特殊文字は使用できません。",
   "usernameRequirements": "ユーザー名は英数字のみ使用可能で、スペースや特殊文字は使用できません",
   "usernameCannotChange": "ユーザー名は変更できません",
@@ -138,6 +140,7 @@
   "documentation": "ドキュメント",
   "support": "サポート",
   "profileDetails": "プロフィール詳細",
+  "fileDetails": "ファイル詳細",
   "appsAndPages": "アプリ＆ページ",
   "userManagement": "ユーザー管理",
   "userNotFoundOrInvalidToken": "ユーザーが見つからないか、無効なトークンです。",
@@ -577,5 +580,90 @@
   "deleteFailed": "削除に失敗しました",
   "modalNotFound": "モーダルが見つかりません",
   "failedToLoadData": "データの読み込みに失敗しました",
-  "googleId": "Google ID"
+  "googleId": "Google ID",
+  "fileInformation": "ファイル情報",
+  "deleteFileConfirmDesc": "このファイルを削除してもよろしいですか？",
+  "uploadFileTitle": "ファイルをアップロード",
+  "uploadFile": "ファイルをアップロード",
+  "notAuthenticated": "認証されていません",
+  "fileManagementTitle": "ファイル管理",
+  "fileDeletedSuccessfully": "ファイルを削除しました！",
+  "failedToUploadFile": "ファイルのアップロードに失敗しました！",
+  "maxFileSize": "最大ファイルサイズ: 100MB",
+  "failedToLoadFiles": "ファイルの読み込みに失敗しました",
+  "filePreview": "ファイルプレビュー",
+  "fileType": "ファイルタイプ",
+  "description": "説明（任意）",
+  "uploading": "アップロード中...",
+  "uploadSuccess": "ファイルのアップロードに成功しました！",
+  "uploadFailed": "ファイルのアップロードに失敗しました！",
+  "enterDescription": "説明を入力（任意）",
+  "deleting": "削除中...",
+  "confirmDeleteUser": "このユーザーを削除してもよろしいですか？",
+  "confirmRestoreUser": "ユーザーを復元してもよろしいですか",
+  "failedToLoadUserInfo": "ユーザー情報の読み込みに失敗しました",
+  "pleaseSelectValidImageFile": "有効な画像ファイルを選択してください（JPG、PNG、GIF）",
+  "imageSizeMustBeLessThan5MB": "画像サイズは5MB未満である必要があります",
+  "imageSizeIsVerySmall": "画像サイズが非常に小さいです。より大きな画像を選択してください",
+  "cropperNotReady": "画像クロッパーが準備できていません",
+  "cropAreaInvalid": "無効な切り取り領域です",
+  "cropAreaLargerThanImage": "切り取り領域が画像より大きいです",
+  "canvasIsNull": "キャンバスが無効です",
+  "profilePictureCroppedSuccessfully": "プロフィール画像が正常に切り取られました",
+  "failedToCropImage": "画像の切り取りに失敗しました",
+  "profilePictureRemoved": "プロフィール画像が削除されました",
+  "failedToUpdateProfile": "プロフィールの更新に失敗しました",
+  "profileUpdatedSuccessfully": "プロフィールが正常に更新されました",
+  "updateFailed": "更新に失敗しました",
+  "failedToInitializeCropper": "画像クロッパーの初期化に失敗しました",
+  "imageTooSmall": "画像が小さすぎます",
+  "failedToLoadImage": "画像の読み込みに失敗しました",
+  "imageIsTooSmall": "画像が小さすぎます",
+  "pdfLibraryNotLoaded": "PDFライブラリが読み込まれていません",
+  "googleLoginFailedPleaseTryAgain": "Googleログインに失敗しました。もう一度お試しください。",
+  "invalidOrExpiredResetToken": "リセットトークンが無効または期限切れです",
+  "pleaseEnterValidEmailAddress": "有効なメールアドレスを入力してください",
+  "passwordMustBeAtLeast6Characters": "パスワードは6文字以上である必要があります",
+  "loginFailedPleaseTryAgain": "ログインに失敗しました。もう一度お試しください。",
+  "usernameInvalid": "ユーザー名は3～50文字、英数字のみ使用できます",
+  "passwordInvalid": "パスワードは6文字以上で、大文字・小文字・数字を含めてください",
+  "registrationFailedTryAgain": "登録に失敗しました。もう一度お試しください。",
+  "failedToSendResetEmailTryAgain": "パスワードリセットメールの送信に失敗しました。もう一度お試しください。",
+  "passwordResetFailedTryAgain": "パスワードのリセットに失敗しました。もう一度お試しください。",
+  "passwordChangeFailedTryAgain": "パスワードの変更に失敗しました。もう一度お試しください。",
+  "saveProfilePicture": "プロフィール画像を保存",
+  "rotateLeft": "左",
+  "rotateRight": "右",
+  "deleteFileConfirmTitle": "ファイル削除の確認",
+  "deleteFileConfirmDesc": "このファイルを完全に削除してもよろしいですか？この操作は元に戻せません。",
+  "uploadedAt": "アップロード日時",
+  "allFieldsRequired": "すべてのフィールドが必要です",
+  "downloadFailed": "ダウンロードに失敗しました",
+  "downloading": "ダウンロード中...",
+  "downloadStarted": "ダウンロードを開始しました",
+  "errorLoadingSettings": "設定の読み込みエラー",
+  "errorLoadingUserProfile": "ユーザープロフィールの読み込みエラー",
+  "errorSavingProfile": "プロフィールの保存エラー",
+  "errorSavingSettings": "設定の保存エラー",
+  "failedToDeleteFile": "ファイルの削除に失敗しました",
+  "failedToLoadUserProfile": "ユーザープロフィールの読み込みに失敗しました",
+  "fileUploadedSuccessfully": "ファイルのアップロードに成功しました",
+  "settingsLoaded": "設定が正常に読み込まれました",
+  "settingsSavedSuccessfully": "設定が正常に保存されました",
+  "userInformationNotFound": "ユーザー情報が見つかりません",
+  "viewFile": "ファイルを表示",
+  "author": "著者",
+  "editor": "編集者",
+  "maintainer": "メンテナー",
+  "subscriber": "購読者",
+  "badgeText": "バッジテキスト",
+  "deleted": "削除済み",
+  "notificationBody": "通知本文",
+  "notificationFooter": "通知フッター",
+  "notificationTitle": "通知タイトル",
+  "popupBody": "ポップアップ本文",
+  "popupFooter": "ポップアップフッター",
+  "popupTitle": "ポップアップタイトル",
+  "threeHundredPercent": "300%",
+  "unknown": "不明"
 }
